#641 Made Type construction and id comparison constexpr.
This allows the use of types in switch cases after being cast to ints.
Removed Common.h from BWAPILIB.

--- a/bwapi/BWAPICoreTest/BWAPICoreTest.vcxproj
+++ b/bwapi/BWAPICoreTest/BWAPICoreTest.vcxproj
@@ -137,6 +137,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <Profile>true</Profile>
+      <LinkTimeCodeGeneration>Default</LinkTimeCodeGeneration>
     </Link>
     <ProjectReference>
       <UseLibraryDependencyInputs>true</UseLibraryDependencyInputs>
