Update gitignore and set verbosity level for AppVeyor.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ bwapi/ipch/
 Release_Binary/Chaoslauncher/__log.txt
 Release_Binary/ExampleAIClient/Source/
 bwapi/packages/
+apps/cygwin/
+apps/http*
+
