Update NuGet packages.

--- a/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
+++ b/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
@@ -52,8 +52,9 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Fasm.NET">
-      <HintPath>..\packages\Fasm.NET.1.70.03\lib\Fasm.NET.dll</HintPath>
+    <Reference Include="Fasm.NET, Version=1.0.4939.27955, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\Fasm.NET.1.70.03.2\lib\Fasm.NET.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="MemorySharp">
       <HintPath>..\packages\MemorySharp.1.1.0\lib\MemorySharp.dll</HintPath>
@@ -142,9 +143,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Fasm.NET.xml" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
