AutoMenuManager: only join games with matching name
In bwapi.ini, specifying:
map=
game=test
would join any game after 9 seconds, regardless if the game name matched or not.
I'd say, if you specify a game name, you probably really want to join a game with that name.

Added option:
game=JOIN_FIRST
to enable joining games without knowing their name.

If both map and game are specified, e.g.:
map=maps/(2)Boxer.scm
game=JOIN_FIRST
it will still create a game if it's not already created.

--- a/Release_Binary/Starcraft/bwapi-data/bwapi.ini
+++ b/Release_Binary/Starcraft/bwapi-data/bwapi.ini
@@ -38,15 +38,15 @@ lan_mode = Local Area Network (UDP)
 ; and then BWAPI resume menu automation and start the next match
 auto_restart = OFF
 
-; map = path to map relative to Starcraft folder, i.e. map = maps/(2)Boxer.scm
+; map = path to map to host relative to Starcraft folder, i.e. map = maps/(2)Boxer.scm
 ; leaving this field blank will join a game instead of creating it
 ; The filename(NOT the path) can also contain wildcards, example: maps/(?)*.sc?
 ; A ? is a wildcard for a single character and * is a wildcard for a string of characters
 map = maps/(?)*.sc?
 
-; game = name of the game to join
-;	i.e., game = BWAPI
-;	will join the game called "BWAPI"
+; game = name of the game to join | JOIN_FIRST
+;	i.e. game = BWAPI will join the game called "BWAPI"
+;   and game = JOIN_FIRST will join the first game in the list.
 ;	If the game does not exist and the "map" entry is not blank, then the game will be created instead
 ;	If this entry is blank, then it will follow the rules of the "map" entry
 game = 
