Mapped out a Broodwar super-structure, eliminated the need for 23 memory addresses.

--- a/bwapi/BWAPI/BWAPI.vcxproj
+++ b/bwapi/BWAPI/BWAPI.vcxproj
@@ -249,6 +249,7 @@ popd</Command>
     <ClInclude Include="Source\BW\AIController.h" />
     <ClInclude Include="Source\BW\Bitmap.h" />
     <ClInclude Include="Source\BW\BNETCommands.h" />
+    <ClInclude Include="Source\BW\BWGame.h" />
     <ClInclude Include="Source\BW\CBullet.h" />
     <ClInclude Include="Source\BW\CheatFlags.h" />
     <ClInclude Include="Source\BW\CheatType.h" />
