--- a/bwapi/BWAPI/BWAPI.vcxproj.filters
+++ b/bwapi/BWAPI/BWAPI.vcxproj.filters
@@ -253,6 +253,9 @@
     <ClInclude Include="Source\BWAPI\Console.h">
       <Filter>BWAPI\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\BW\BWGame.h">
+      <Filter>BW\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\BW\CheatType.cpp">
