Make SVNRevGen work in non-bwapi solutions

--- a/bwapi/SVNRevGen/SVNRevGen.vcxproj
+++ b/bwapi/SVNRevGen/SVNRevGen.vcxproj
@@ -50,7 +50,7 @@
     </Link>
     <PreBuildEvent />
     <CustomBuildStep>
-      <Command>pushd "$(SolutionDir)"
+      <Command>pushd ".."
 cscript "./revisionUpdate.vbs"
 popd</Command>
     </CustomBuildStep>
@@ -75,7 +75,7 @@ popd</Command>
     </Link>
     <PreBuildEvent />
     <CustomBuildStep>
-      <Command>pushd "$(SolutionDir)"
+      <Command>pushd ".."
 cscript "./revisionUpdate.vbs"
 popd</Command>
     </CustomBuildStep>
